# concordium-playground

./: .gitignore  LICENSE  README.md
.github/: format-and-test.yaml
.github/workflows/: format-and-test.yaml
auctionId/: .gitignore  Cargo.toml  README.md  initialize.sh
auctionId/contract/: Cargo.toml  README.md
auctionId/contract/input/: balanceOf.json  init.json  init_auction.json  mint.json
auctionId/contract/src/: lib.rs
auctionId/frontend/: README.md  package-lock.json  package.json
auctionId/frontend/src/: App.tsx  index.tsx  schema.json
auctionId/frontend/src/components/: Auction.tsx  Overview.tsx  WalletConnect.tsx
auctionId/frontend/src/modules/: contractClients.ts  verifierClient.ts
auctionId/frontend/src/utils/: config.ts
auctionId/generators/: Cargo.toml  README.md
auctionId/generators/src/: main.rs
auctionId/schema/: Cargo.toml  README.md
auctionId/schema/src/: main.rs
auctionId/verifier/: Cargo.toml  README.md
auctionId/verifier/src/: handlers.rs  main.rs  types.rs
reentrance/: Cargo.toml  Makefile  README.md
reentrance/docs/: sequence
reentrance/src/: attacker.rs  common.rs  lib.rs  reentrance.rs  reentrance_checks_effects_interactions.rs  reentrance_mutex.rs  reentrance_readonly.rs  saint.rs
