[package]
name = "reentrance"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "schwartz <40674593+3schwartz@users.noreply.github.com>" ]
description = " "

[features]
default = ["std"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = {version = "8.1", default-features = false}
anyhow="1.0"

[dev-dependencies]
concordium-smart-contract-testing = "3.1"
hex = "0.4"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
