[package]
name = "contract"
version = "0.1.0"
authors = [ "schwartz" ]
edition = "2018"
license = "MPL-2.0"
description = " "

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
wee_alloc = ["concordium-std/wee_alloc"]
crypto-primitives = ["concordium-std/crypto-primitives"]

[dependencies]
concordium-std = {version = "6.1", default-features = false}
concordium-cis2 = {version = "3.0", default-features = false}
hex = "0.4"
sha2 = "0.10.6"
rand = "0.7"
ed25519-dalek = "1.0"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
