[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
concordium-rust-sdk = "2.3"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tokio = {version = "1.26", features = ["full"]}
thiserror = "1.0"
anyhow = "1.0"
warp = "0.3"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
ed25519-dalek = "1.0"
hex = "0.4"